--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,6 +91,12 @@ const allPostsData = posts.map((post) => {
     text-align: center;
   }
 
+  @media (max-width: 768px) {
+    .heading {
+      height: 70vh;
+    }
+  }
+
   .heading h1 {
     font-size: 5rem;
   }
