Add notes on BlueDot paper club papers

--- a/src/pages/ideas/index.astro
+++ b/src/pages/ideas/index.astro
@@ -371,8 +371,8 @@ const hierarchicalPosts = allPostsData
     }
 
     :global([data-effective-theme="dark"]) .post-card--note {
-      background-color: var(--base01);
-      border-color: var(--sol-7);
+      /* background-color: var(--base01);
+      border-color: var(--sol-7); */
     }
 
     .post-card--note .post-card-content {
